--- a/Makefile.am
+++ b/Makefile.am
@@ -118,6 +118,7 @@ SUBDIRS += \
     parser \
     aclk/legacy \
     spawn \
+    logsmanagement \
     $(NULL)
 
 
@@ -623,6 +624,23 @@ MONGODB_BACKEND_FILES = \
     backends/mongodb/mongodb.h \
     $(NULL)
 
+LOGSMANAGEMENT_PLUGIN_FILES = \
+    logsmanagement/circular_buffer.c \
+    logsmanagement/circular_buffer.h \
+    logsmanagement/compression.c \
+    logsmanagement/compression.h \
+    logsmanagement/config.h \
+    logsmanagement/db_api.c \
+    logsmanagement/db_api.h \
+    logsmanagement/file_info.h \
+    logsmanagement/helper.h \
+    logsmanagement/logsmanagement.c \
+    logsmanagement/query.c \
+    logsmanagement/query.h \
+    logsmanagement/query_test.c \
+    logsmanagement/query_test.h \
+    $(NULL)
+
 DAEMON_FILES = \
     daemon/buildinfo.c \
     daemon/buildinfo.h \
@@ -662,6 +680,7 @@ NETDATA_FILES = \
     $(PARSER_FILES) \
     $(ACLK_FILES) \
     $(SPAWN_PLUGIN_FILES) \
+    $(LOGSMANAGEMENT_PLUGIN_FILES) \
     $(NULL)
 
 if FREEBSD
