--- a/logsmanagement/stress_test/log_management.conf
+++ b/logsmanagement/stress_test/log_management.conf
@@ -1,7 +1,7 @@
 [Test 0.log]
 	enabled = yes
 	log path = /tmp/netdata_log_management_stress_test_data/0.log
-	log format = "%r" %v:%p %v %h %p %D $upstream_response_time $ssl_protocol %m %H $scheme %>s $ssl_cipher %i %l %u %t %b
+	log format = %t %p %m %>s
 
 [Test 1.log]
 	enabled = yes
