--- a/logsmanagement/stress_test/log_management.conf
+++ b/logsmanagement/stress_test/log_management.conf
@@ -6,6 +6,7 @@
 [Test 1.log]
 	enabled = yes
 	log path = /tmp/netdata_log_management_stress_test_data/1.log
+	log format = %t %p %m %>s
 
 [Test 2.log]
 	enabled = yes
