--- a/logsmanagement/stress_test/log_management.conf
+++ b/logsmanagement/stress_test/log_management.conf
@@ -1,12 +1,12 @@
 [Test 0.log]
 	enabled = yes
 	log path = /tmp/netdata_log_management_stress_test_data/0.log
-	log format = %t %p %m %>s
+	log format = %t %p %m %>s %H
 
 [Test 1.log]
 	enabled = yes
 	log path = /tmp/netdata_log_management_stress_test_data/1.log
-	log format = %t %p %m %>s
+	log format = %t %p %m %>s %H
 
 [Test 2.log]
 	enabled = yes
