--- a/logsmanagement/stress_test/log_management.conf
+++ b/logsmanagement/stress_test/log_management.conf
@@ -8,9 +8,10 @@
 	log path = /tmp/netdata_log_management_stress_test_data/1.log
 	log format = %t %p %m %>s %H %I %O $ssl_protocol 
 
-[Test 2.log]
+[Apache access.log]
 	enabled = yes
-	log path = /tmp/netdata_log_management_stress_test_data/2.log
+	log path = /var/log/apache2/access.log
+	log format = %h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"
 
 [Test 3.log]
 	enabled = yes
