Fix DELETE and GET req method mix-up

--- a/logsmanagement/stress_test/log_management.conf
+++ b/logsmanagement/stress_test/log_management.conf
@@ -11,7 +11,7 @@
 [Apache access.log]
 	enabled = yes
 	log path = /var/log/apache2/access.log
-	log format = %h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"
+	log format = %h %l %u %t "%r" %>s %O "%{Referer}i" "%{User-Agent}i"
 
 [Test 3.log]
 	enabled = yes
