Add metrics collection and charts for current poll unique client IPs

--- a/logsmanagement/stress_test/log_management.conf
+++ b/logsmanagement/stress_test/log_management.conf
@@ -8,32 +8,22 @@
 	log path = /tmp/netdata_log_management_stress_test_data/1.log
 	log format = %t %v:%p %h %m %>s %H %I %O $ssl_protocol 
 
-[Apache access.log]
+[Test 2.log]
 	enabled = yes
-	log path = /var/log/apache2/access.log
-	log format = %v:%p %h %l %u %t "%r" %>s %O "%{Referer}i" "%{User-Agent}i"
+	log path = /tmp/netdata_log_management_stress_test_data/2.log
+	log format = %t %v:%p %h %m %>s %H %I %O $ssl_protocol 
 
 [Test 3.log]
 	enabled = yes
 	log path = /tmp/netdata_log_management_stress_test_data/3.log
+	log format = %t %v:%p %h %m %>s %H %I %O $ssl_protocol 
 
 [Test 4.log]
 	enabled = yes
 	log path = /tmp/netdata_log_management_stress_test_data/4.log
+	log format = %t %v:%p %h %m %>s %H %I %O $ssl_protocol 
 
-[Test 5.log]
+[Apache access.log]
 	enabled = yes
-	log path = /tmp/netdata_log_management_stress_test_data/5.log
-
-[Test 6.log]
-	enabled = yes
-	log path = /tmp/netdata_log_management_stress_test_data/6.log
-
-[Test 7.log]
-	enabled = yes
-	log path = /tmp/netdata_log_management_stress_test_data/7.log
-
-[Test 8.log]
-	enabled = yes
-	log path = /tmp/netdata_log_management_stress_test_data/8.log
-
+	log path = /var/log/apache2/access.log
+	log format = %v:%p %h %l %u %t "%r" %>s %O "%{Referer}i" "%{User-Agent}i"
