--- a/logsmanagement/stress_test/log_management.conf
+++ b/logsmanagement/stress_test/log_management.conf
@@ -1,27 +1,27 @@
 [Test 0.log]
 	enabled = yes
 	log path = /tmp/netdata_log_management_stress_test_data/0.log
-	log format = %t %v:%p %h %m %>s %H %I %O $ssl_protocol 
+	log format = %t %v:%p %h %m %>s %H %I %O $ssl_protocol $ssl_cipher
 
 [Test 1.log]
 	enabled = yes
 	log path = /tmp/netdata_log_management_stress_test_data/1.log
-	log format = %t %v:%p %h %m %>s %H %I %O $ssl_protocol 
+	log format = %t %v:%p %h %m %>s %H %I %O $ssl_protocol $ssl_cipher
 
 [Test 2.log]
 	enabled = yes
 	log path = /tmp/netdata_log_management_stress_test_data/2.log
-	log format = %t %v:%p %h %m %>s %H %I %O $ssl_protocol 
+	log format = %t %v:%p %h %m %>s %H %I %O $ssl_protocol $ssl_cipher
 
 [Test 3.log]
 	enabled = yes
 	log path = /tmp/netdata_log_management_stress_test_data/3.log
-	log format = %t %v:%p %h %m %>s %H %I %O $ssl_protocol 
+	log format = %t %v:%p %h %m %>s %H %I %O $ssl_protocol $ssl_cipher
 
 [Test 4.log]
 	enabled = yes
 	log path = /tmp/netdata_log_management_stress_test_data/4.log
-	log format = %t %v:%p %h %m %>s %H %I %O $ssl_protocol 
+	log format = %t %v:%p %h %m %>s %H %I %O $ssl_protocol $ssl_cipher
 
 [Apache access.log]
 	enabled = yes
