Add configuration options that allow enabling or disabling each chart for each log source separately

--- a/logsmanagement/stress_test/log_management.conf
+++ b/logsmanagement/stress_test/log_management.conf
@@ -2,28 +2,106 @@
 	enabled = yes
 	log path = /tmp/netdata_log_management_stress_test_data/0.log
 	log format = %t %v:%p %h %m %>s %H %I %O $ssl_protocol $ssl_cipher
+	vhosts chart = yes
+	ports chart = yes
+	IP versions chart = yes
+	unique client IPs - current poll chart = yes
+	unique client IPs - all-time chart = yes
+	http request methods chart = yes
+	http protocol versions chart = yes
+	bandwidth chart = yes
+	response code families chart = yes
+	response codes chart = yes
+	response code types chart = yes
+	SSL protocols chart = yes
+	SSL chipher suites chart = yes
 
 [Test 1.log]
 	enabled = yes
 	log path = /tmp/netdata_log_management_stress_test_data/1.log
 	log format = %t %v:%p %h %m %>s %H %I %O $ssl_protocol $ssl_cipher
+	vhosts chart = yes
+	ports chart = yes
+	IP versions chart = yes
+	unique client IPs - current poll chart = yes
+	unique client IPs - all-time chart = yes
+	http request methods chart = yes
+	http protocol versions chart = yes
+	bandwidth chart = yes
+	response code families chart = yes
+	response codes chart = yes
+	response code types chart = yes
+	SSL protocols chart = yes
+	SSL chipher suites chart = yes
 
 [Test 2.log]
 	enabled = yes
 	log path = /tmp/netdata_log_management_stress_test_data/2.log
 	log format = %t %v:%p %h %m %>s %H %I %O $ssl_protocol $ssl_cipher
+	vhosts chart = yes
+	ports chart = yes
+	IP versions chart = yes
+	unique client IPs - current poll chart = yes
+	unique client IPs - all-time chart = yes
+	http request methods chart = yes
+	http protocol versions chart = yes
+	bandwidth chart = yes
+	response code families chart = yes
+	response codes chart = yes
+	response code types chart = yes
+	SSL protocols chart = yes
+	SSL chipher suites chart = yes
 
 [Test 3.log]
 	enabled = yes
 	log path = /tmp/netdata_log_management_stress_test_data/3.log
 	log format = %t %v:%p %h %m %>s %H %I %O $ssl_protocol $ssl_cipher
+	vhosts chart = yes
+	ports chart = yes
+	IP versions chart = yes
+	unique client IPs - current poll chart = yes
+	unique client IPs - all-time chart = yes
+	http request methods chart = yes
+	http protocol versions chart = yes
+	bandwidth chart = yes
+	response code families chart = yes
+	response codes chart = yes
+	response code types chart = yes
+	SSL protocols chart = yes
+	SSL chipher suites chart = yes
 
 [Test 4.log]
 	enabled = yes
 	log path = /tmp/netdata_log_management_stress_test_data/4.log
 	log format = %t %v:%p %h %m %>s %H %I %O $ssl_protocol $ssl_cipher
+	vhosts chart = yes
+	ports chart = yes
+	IP versions chart = yes
+	unique client IPs - current poll chart = yes
+	unique client IPs - all-time chart = yes
+	http request methods chart = yes
+	http protocol versions chart = yes
+	bandwidth chart = yes
+	response code families chart = yes
+	response codes chart = yes
+	response code types chart = yes
+	SSL protocols chart = yes
+	SSL chipher suites chart = yes
 
 [Apache access.log]
 	enabled = yes
 	log path = /var/log/apache2/access.log
 	log format = %v:%p %h %l %u %t "%r" %>s %O "%{Referer}i" "%{User-Agent}i"
+	vhosts chart = yes
+	ports chart = yes
+	IP versions chart = yes
+	unique client IPs - current poll chart = yes
+	unique client IPs - all-time chart = yes
+	http request methods chart = yes
+	http protocol versions chart = yes
+	bandwidth chart = yes
+	response code families chart = yes
+	response codes chart = yes
+	response code types chart = yes
+	SSL protocols chart = yes
+	SSL chipher suites chart = yes
