Fix config time field ignored when enclosed in brackets (common in nginx)

--- a/logsmanagement/stress_test/log_management.conf
+++ b/logsmanagement/stress_test/log_management.conf
@@ -91,7 +91,25 @@
 [Apache access.log]
 	enabled = yes
 	log path = /var/log/apache2/access.log
-	log format = %v:%p %h %l %u %t "%r" %>s %O "%{Referer}i" "%{User-Agent}i"
+	log format = %v:%p %D %h %l %u %t "%r" %>s %O "%{Referer}i" "%{User-Agent}i"
+	vhosts chart = yes
+	ports chart = yes
+	IP versions chart = yes
+	unique client IPs - current poll chart = yes
+	unique client IPs - all-time chart = yes
+	http request methods chart = yes
+	http protocol versions chart = yes
+	bandwidth chart = yes
+	response code families chart = yes
+	response codes chart = yes
+	response code types chart = yes
+	SSL protocols chart = yes
+	SSL chipher suites chart = yes
+
+[Nginx access.log]
+	enabled = yes
+	log path = /var/log/nginx/access.log
+	log format = $remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent $request_length $request_time "$http_referer" "$http_user_agent"
 	vhosts chart = yes
 	ports chart = yes
 	IP versions chart = yes
