Add extraction, metrics collection and chart for request processing time stats

--- a/logsmanagement/stress_test/log_management.conf
+++ b/logsmanagement/stress_test/log_management.conf
@@ -10,6 +10,7 @@
 	http request methods chart = yes
 	http protocol versions chart = yes
 	bandwidth chart = yes
+	timings chart = yes
 	response code families chart = yes
 	response codes chart = yes
 	response code types chart = yes
@@ -28,6 +29,7 @@
 	http request methods chart = yes
 	http protocol versions chart = yes
 	bandwidth chart = yes
+	timings chart = yes
 	response code families chart = yes
 	response codes chart = yes
 	response code types chart = yes
@@ -46,6 +48,7 @@
 	http request methods chart = yes
 	http protocol versions chart = yes
 	bandwidth chart = yes
+	timings chart = yes
 	response code families chart = yes
 	response codes chart = yes
 	response code types chart = yes
@@ -64,6 +67,7 @@
 	http request methods chart = yes
 	http protocol versions chart = yes
 	bandwidth chart = yes
+	timings chart = yes
 	response code families chart = yes
 	response codes chart = yes
 	response code types chart = yes
@@ -82,6 +86,7 @@
 	http request methods chart = yes
 	http protocol versions chart = yes
 	bandwidth chart = yes
+	timings chart = yes
 	response code families chart = yes
 	response codes chart = yes
 	response code types chart = yes
@@ -100,6 +105,7 @@
 	http request methods chart = yes
 	http protocol versions chart = yes
 	bandwidth chart = yes
+	timings chart = yes
 	response code families chart = yes
 	response codes chart = yes
 	response code types chart = yes
@@ -118,6 +124,7 @@
 	http request methods chart = yes
 	http protocol versions chart = yes
 	bandwidth chart = yes
+	timings chart = yes
 	response code families chart = yes
 	response codes chart = yes
 	response code types chart = yes
