Complete CSV format auto-detection

--- a/logsmanagement/stress_test/log_management.conf
+++ b/logsmanagement/stress_test/log_management.conf
@@ -96,7 +96,8 @@
 [Apache access.log]
 	enabled = yes
 	log path = /var/log/apache2/access.log
-	log format = %v:%p %D %h %l %u %t "%r" %>s %O "%{Referer}i" "%{User-Agent}i"
+	# log format = %v:%p %D %h %l %u %t "%r" %>s %O "%{Referer}i" "%{User-Agent}i"
+	log format = auto
 	vhosts chart = yes
 	ports chart = yes
 	IP versions chart = yes
@@ -113,7 +114,7 @@
 	SSL chipher suites chart = yes
 
 [Nginx access.log]
-	enabled = yes
+	enabled = no
 	log path = /var/log/nginx/access.log
 	log format = $remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent $request_length $request_time "$http_referer" "$http_user_agent"
 	vhosts chart = yes
